# Regex

./: Handlers.hs  Operations.hs  Opis.docx  Parsing.hs  README.md  Regex.cabal  Regex.hs  RegexTest.hs  Repetition.hs  SetOperations.hs  main.hs
.github/workflows/: haskell.yml
app/: CharFunctions.hs  Main.hs
