cabal-version:      3.4
name:               Regex
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Tomasz Koczar
maintainer:         tomekkoczar@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable Regex
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-modules:    Regex, CharFunctions, Handlers, Operations, Parsing, Repetition, SetOperations
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0, HUnit >=1.6, containers
    hs-source-dirs:   app
    default-language: Haskell2010
